--- a/index.html
+++ b/index.html
@@ -120,11 +120,6 @@
             /*color: white;*/
         }
 
-        /* Style links */
-        a {
-            /*color: white;*/
-            text-decoration: none;
-        }
 
         p {
             font-family: 'Montserrat Alternates', sans-serif;
@@ -177,10 +172,10 @@
             font-size: large;
         }
 
-        .links ul li a {
+        a {
             font-style: italic;
             font-size: large;
-            color: #007bff;
+            color: #568be6;
             /* Adjust link color */
         }
 
@@ -195,9 +190,9 @@
     </header>
     <section class='text-container'>
         <p class="intro">
-            I am an enthusiastic problem solver, driven by a passion for mathematics. My background involves
+            I am a dedicated problem solver, driven by a passion for mathematics. My background involves
             recognizing and deciphering patterns within datasets. I specialize in deploying data-driven methodologies to
-            address business challenges and guide strategic decision-making. I'm intrigued by the fusion of new
+            address business challenges and guide strategic decision-making. I'm highly interested by the fusion of new
             technologies with mathematical principles in the field of AI. Continual learning and growth are integral
             parts of my journey.
         </p>
@@ -219,10 +214,12 @@
             <h3>Data Scientist - ABC DATA (December 2022 - July 2023)</h3>
             <p>
                 Created an automated data pipeline for signal detection in the context of pharmacovigilance.
-                Signal detection is detemining the degree of suspicion on the consumption a particular drug
-                being the cause of an adverse event. Supported the signal detection pipeline with a
-                Machine Learning supervisedvclassification
-                algorithm to estimate the degree of suspicion of the signal.
+                The goal of signal detection is to accurately estimate the degree of suspicion on
+                the consumption a specific drug being the cause of a particular adverse reaction.
+                I supported the signal detection pipeline with a supervised classification ML
+                algorithm to estimate the degree of suspicion of the signal, this brought more robustness
+                to the signal detection process and overcame some of the biases involved in signal detection
+                from sponteneous reports of adverse drug reactions.
             </p>
         </div>
 
@@ -263,12 +260,21 @@
                 <h3> (2014-2021)</h3>
             </div>
             <h4>Mathematics, Ph.D. Boulder, CO, US.</h4>
-            <p>Created an abstract iterative proof that certain coefficients
-                could be computed in terms of the Laplacian of differential
-                forms, differential forms are the building blocks of differential
-                equations. This proof of this showed the equivalence of
-                certain spaces of equations for differential forms
-                (Sobolev Spaces) in a negatively curved space.</p>
+            <p>As a result of my doctorate studies I wrote
+                <a href="https://www.researchgate.net/publication/338584701_On_the_Hodge_decomposition">Hodge
+                    decomposition for the Sobolev space H<sup>l</sup>(Λ<sup>k</sup>) on aspace form of nonpositive
+                    sectional
+                    curvature</a>,
+                which is a proof of a decomposition of spaces of differential equations of differential
+                forms in the negatively curved space. This highly non-trivial proof consited on
+                an iterative proof that certain formule could be computed in terms of the Laplacian of differential
+                forms, further, the proof concluded by showing that these formulae implied
+                the decomposition of these spaces of differential forms. The reach of this proof
+                implied the possibility to decompose equations of motion into orthogonal spaces
+                up to any degree of differentiability of the diferential equations involved.
+                Differential forms are the building blocks of differential
+                equations, then
+            </p>
         </div>
         <div class="diff-c">
             <div class="ed-title"><img src="assets/uniandes2.png">
@@ -276,10 +282,14 @@
             </div>
             <h4>Mathematics Master's. Bogota, Colombia.</h4>
             <p>
-                Proved that blow-up solutions to the Navier Stokes system of
-                equations in a periodic domain if they exist they blow up
-                (approach art a singularity) they must grow above a certain rate
-                in some specific spaces of differential equations (Sobolev Spaces).
+                In the article
+                <a href="https://www.researchgate.net/publication/376782172_Master_thesis">On the regularity of the
+                    Navier-Stokes equations</a>
+                I proved that singular solutions to the Navier Stokes equations must must grow above certain rate
+                when they are approaching the singularity, if these singular solutions do exist. The proof is for
+                solutions in a confined domain, it consisted in using a similar train of thought as in the seminal
+                work done by Leray for the NS equations for estimating blow-up solutions when they approach the
+                singularity and developing some bounds in particular spaces of differential equations.
             </p>
         </div>
 
@@ -317,9 +327,10 @@
         <ul>
             <li><a href="https://github.com/capi1206">GitHub</a> - Find my projects in the repositories section, in
                 which the code for this site is available.</li>
-            <li><a href="https://www.linkedin.com/in/carlos-pinilla-7663a041/">LinkedIn</a> - LinkedIn page.</li>
+            <li><a href="https://www.linkedin.com/in/carlos-pinilla-7663a041/">LinkedIn</a> - LinkedIn profile page.
+            </li>
             <li><a href="https://www.researchgate.net/profile/Carlos-Pinilla-4">Research gate</a> - Link to mathematics
-                research projects, both my Master and Ph.D. Thesis can be found here.</li>
+                research projects.</li>
         </ul>
     </section>
     <section class='hobbies-sect links'>
@@ -330,10 +341,10 @@
                     href="https://www.deviantart.com/carloshendrix">DeviantArt</a>.</li>
             <li>I enjoy learning languages, besides of having proficiency at English and Spanish I am learning
                 Simplified Chinese and French,
-                check out my duolingo profile <a href="https://www.duolingo.com/profile/CarlosHendrix9">Duolingo</a>.
+                check out my <a href="https://www.duolingo.com/profile/CarlosHendrix9">Duolingo profile</a>.
             </li>
-            <li>I enjoy doing sport, long distance running, which I practice every day, and swimming, which I do not
-                practice that often.</li>
+            <li>I enjoy doing sport, I like long distance running and swimming. I have been running for about twenty
+                years now.</li>
             <li>I also enjoy playing the guitar and going to concerts.</li>
         </ul>
     </section>
